--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@nuxt/content": "^1.11.1",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "fibers": "^5.0.0",
+    "nuxt": "^2.14.6",
+    "sass-loader": "10"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
