--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass-loader": "7.1.0"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/vuetify": "^1.11.2"
   }
