--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.6.5",
     "fibers": "^5.0.0",
+    "lazysizes": "^5.3.0",
     "moment": "^2.29.1",
     "nuxt": "^2.15.0",
     "sass-loader": "7.1.0"
